fix: adds scrollbar to the menu and changes the design

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -115,27 +115,28 @@ body > footer {
   background : bulmaRgba($green, 0.4);
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar {
+  background-color : #121212;
+  width            : 1rem;
+}
+
+::-webkit-scrollbar-track {
   background-color   : #121212;
   border-radius      : 10px;
   -webkit-box-shadow : inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-body::-webkit-scrollbar {
-  background-color : #121212;
-  width            : 1rem;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color   : white;
-  border-radius      : 10px;
-  -webkit-box-shadow : inset 0 0 6px rgba(0, 0, 0, .3);
+::-webkit-scrollbar-thumb {
+  background-color   : darkslategrey;
+  -webkit-box-shadow : inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .menu {
-  position         : fixed;
-  height           : 100%;
   background-color : #121212;
+  max-height       : 100%;
+  min-height       : 100%;
+  overflow         : auto;
+  position         : fixed;
   z-index          : 999999;
 }
 
